2010-05-31  Jean-Louis Martineau <martineau@zmanda.com>
	* installcheck/gnutar.pl: gnutar exclude in 1.22.90 is like 1.23.

2010-05-31  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/find.c(print_find_result): Quote label.

2010-05-31  Jean-Louis Martineau <martineau@zmanda.com>
	* config/set_full_version: Add comments.

2010-05-28  Dustin J. Mitchell <dustin@zmanda.com>
	* installcheck/gnutar.pl: tests for gnutar globbing behavior
	* installcheck/Makefile.am: run them

2010-05-28 Dan Locks <dwlocks@zmanda.com>
	*  packaging/Makefile.am: include common in EXTRA_DIST

2010-05-28 Dan Locks <dwlocks@zmanda.com>

2010-05-27  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/find.c: Don't report taper line with filenum=0.

2010-05-27  Dustin J. Mitchell <dustin@zmanda.com>
	* installcheck/taper.pl: test for a new write after EOM without
	  splitting
	* perl/Amanda/Taper/Scribe.pm: handle the case correctly by tracking
	  this condition and switching to a new volume appropriately

2010-05-26  Dustin J. Mitchell <dustin@zmanda.com>
	* config/amanda/libs.m4: Allow user to specify glib config explicitly

2010-05-25  Dustin J. Mitchell <dustin@zmanda.com>
	* perl/Makefile.am: add libamxfer as a dependency of libamglue

2010-05-25  Dustin J. Mitchell <dustin@zmanda.com>
	* installcheck/amtapetype.pl: use force for subsequent runs

2010-05-25  Dustin J. Mitchell <dustin@zmanda.com>
	* device-src/amtapetype.pl: close and re-open devices between tests
	* device-src/xfer-dest-device.c: fix memory leak
	* man/xml-source/amtapetype.8.xml: fix -f docs

2010-05-21  Jean-Louis Martineau <martineau@zmanda.com>
	* ndmp-src/ndma_cops_backreco.c: Log 'fetch post backup env failed'
	  with level if NDMP9_ILLEGAL_STATE_ERR.

2010-05-21  Dustin J. Mitchell <dustin@zmanda.com>
	* device-src/amtapetype.pl: get the block_size property earlier
	* device-src/device.c: allow property_get after a DEVICE_ERROR

2010-05-21  Jean-Louis Martineau <martineau@zmanda.com>